--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.56.2",
     "@types/linkifyjs": "^2.1.7",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/node": "^5.1.13",
     "axios": "^1.8.3",
     "body-parser": "^1.20.3",
